2008-09-29  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* modules/recaptcha.pl: New perldoc-style documentation.
	($ReCaptchaTheme): New option.
	($ReCaptchaTabIndex): New option.
	(ReCaptchaGetQuestionHtml): New function. Permits site-specific
	customization of module-emitted HTML and CSS.
	(ReCaptchaGetQuestion): Rewritten so as to leverage the two new options and
	one new function.

2008-09-29  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* modules/toc.pl: New perldoc-style documentation.
	($TocHeaderText): New option.
	(TocPageHtml): Introduced a Footnotes extension-specific hack, so
	as to circumvent footnote indexing errors after generating the
	table of contents.

2008-09-28  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* modules/footnotes.pl: Refactored. Yet another flashy rewrite; it
	improves integration with "toc.pl", and provides improved HTML
	configurability, CSS styleability, and perldoc-style documentation.

2008-09-22  Brian Curry  <http://www.raiazome.com/Brian_Curry>

	* modules/smarttitles.pl: Refactored. This is a flashy rewrite; it
	improves integration with "creole.pl", "poetry.pl", et al., HTML
	configurability, CSS styleability, and perldoc-style documentation.

2008-09-22  Alex Schroeder  <alex@gnu.org>

	* modules/namespaces.pl (NewNamespaceGetAuthorLink): New hook into
	GetAuthorLink to make sure the author link is never considered
	invalid using NewNamespaceValidId.
	(NamespaceValidId): Deleted.
	(NewNamespaceValidId): Fully featured replacement only used by
	GetAuthorLink. $NamespaceSlashing remains unused.

	* modules/journal-rss.pl (JournalRssGetRcLines): New.
	(DoJournalRss): Use JournalRssGetRcLines since GetRcRss was
	changed.

2008-09-21  Alex Schroeder  <alex@gnu.org>

	* wiki.pl (GetRcRss): Since this sub no longer takes RC lines as
	parameters, there's no point in passing @_ to ProcessRcLines.

2008-09-20  Alex Schroeder  <alex@gnu.org>

	* wiki.pl ($RssStrip): New option.